# knight_tour_rust

./: .gitignore  Cargo.toml  README.org
src/: experiment.rs  main.rs  my_serde.rs
